objects/MPU_Filter_Criteria__c/MPU_Filter_Criteria__c.object-meta.xml
<CustomObject>
    <label>MPU Filter Criteria</label>
    <nameField>
        <label>MPU Filter Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MPU Filter Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>