objects/MPU_Filter_Criteria__c/fields/discountPercent__c.field-meta.xml
<CustomField>
    <fullName>discountPercent__c</fullName>
    <label>discountPercent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>