objects/MPU_Filter_Criteria__c/fields/discountSchedule__c.field-meta.xml
<CustomField>
    <fullName>discountSchedule__c</fullName>
    <label>discountSchedule</label>
    <length>250</length>
    <type>Text</type>
</CustomField>