objects/MPU_Filter_Criteria__c/fields/rule1Map__c.field-meta.xml
<CustomField>
    <fullName>rule1Map__c</fullName>
    <label>rule1Map</label>
    <length>250</length>
    <type>Text</type>
</CustomField>