objects/MPU_Filter_Criteria__c/fields/rule2DiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>rule2DiscountPercent__c</fullName>
    <label>rule2DiscountPercent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>