objects/MPU_Filter_Criteria__c/fields/rule2DiscountSchedule__c.field-meta.xml
<CustomField>
    <fullName>rule2DiscountSchedule__c</fullName>
    <label>rule2DiscountSchedule</label>
    <length>200</length>
    <type>Text</type>
</CustomField>