objects/MPU_Filter_Criteria__c/fields/rule2Map__c.field-meta.xml
<CustomField>
    <fullName>rule2Map__c</fullName>
    <label>rule2Map</label>
    <length>250</length>
    <type>Text</type>
</CustomField>