objects/MPU_Filter_Criteria__c/fields/rule2SelectedPriceColumn__c.field-meta.xml
<CustomField>
    <fullName>rule2SelectedPriceColumn__c</fullName>
    <label>rule2SelectedPriceColumn</label>
    <length>200</length>
    <type>Text</type>
</CustomField>