objects/MPU_Filter_Criteria__c/fields/rule2SelectedSign__c.field-meta.xml
<CustomField>
    <fullName>rule2SelectedSign__c</fullName>
    <label>rule2SelectedSign</label>
    <length>200</length>
    <type>Text</type>
</CustomField>