objects/MPU_Filter_Criteria__c/fields/rule3DiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>rule3DiscountPercent__c</fullName>
    <label>rule3DiscountPercent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>