objects/MPU_Filter_Criteria__c/fields/rule3DiscountSchedule__c.field-meta.xml
<CustomField>
    <fullName>rule3DiscountSchedule__c</fullName>
    <label>rule3DiscountSchedule</label>
    <length>250</length>
    <type>Text</type>
</CustomField>