objects/MPU_Filter_Criteria__c/fields/rule3Map__c.field-meta.xml
<CustomField>
    <fullName>rule3Map__c</fullName>
    <label>rule3Map</label>
    <length>250</length>
    <type>Text</type>
</CustomField>