objects/MPU_Filter_Criteria__c/fields/rule3SelectedPriceColumn__c.field-meta.xml
<CustomField>
    <fullName>rule3SelectedPriceColumn__c</fullName>
    <label>rule3SelectedPriceColumn</label>
    <length>200</length>
    <type>Text</type>
</CustomField>