objects/MPU_Filter_Criteria__c/fields/rule3SelectedSign__c.field-meta.xml
<CustomField>
    <fullName>rule3SelectedSign__c</fullName>
    <label>rule3SelectedSign</label>
    <length>200</length>
    <type>Text</type>
</CustomField>