objects/MPU_Filter_Criteria__c/fields/selectedPriceColumn__c.field-meta.xml
<CustomField>
    <fullName>selectedPriceColumn__c</fullName>
    <label>selectedPriceColumn</label>
    <length>200</length>
    <type>Text</type>
</CustomField>