objects/MPU_Filter_Criteria__c/fields/selectedSign__c.field-meta.xml
<CustomField>
    <fullName>selectedSign__c</fullName>
    <label>selectedSign</label>
    <length>200</length>
    <type>Text</type>
</CustomField>