objects/MPU_Filter_Criteria__c/fields/specificFilter__c.field-meta.xml
<CustomField>
    <fullName>specificFilter__c</fullName>
    <label>specificFilter</label>
    <length>200</length>
    <type>Text</type>
</CustomField>