objects/MPU_Filter_Criteria__c/fields/specificRule2Filter__c.field-meta.xml
<CustomField>
    <fullName>specificRule2Filter__c</fullName>
    <label>specificRule2Filter</label>
    <length>200</length>
    <type>Text</type>
</CustomField>