objects/MPU_Filter_Criteria__c/fields/specificRule3Filter__c.field-meta.xml
<CustomField>
    <fullName>specificRule3Filter__c</fullName>
    <label>specificRule3Filter</label>
    <length>200</length>
    <type>Text</type>
</CustomField>